# pyorcasdk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cleanup.py  pyproject.toml
.github/workflows/: build-wheels.yml
bindings/: pyOrcaSDK.cpp  pyorcasdk.cpp
documentation/: index.html  pyorcasdk.html
pyOrcaSDK/: __init__.py  __init__.pyi  _pyOrcaSDK.pyi  _pyorcasdk.pyi
pyorcasdk/: _pyorcasdk.pyi
