[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pyOrcaSDK"
version = "0.0.1"
readme = "README.md"
license = {file = 'LICENSE'}
dependencies = []
description = "pyOrcaSDK ported from the C++ orcaSDK library"
authors = [
    {name = "Jake Taranov", email = "jtaranov@irisdynamics.com"},
]
requires-python = ">=3.8"

[tool.cibuildwheel]
build = "cp312-*"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
cmake.build-type = "Release"
cmake.version = "CMakeLists.txt"
sdist.include = ["pyOrcaSDK/*.pyi"]
sdist.exclude = ["pyOrcaSDK/__pycache__", "tests/", "cleanup.py"]
wheel.exclude = ["pyOrcaSDK/__pycache__"]
wheel.packages = ["pyOrcaSDK"]

